OpenShift/api/api-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  graph-api-apps
  namespace: dependencies
  labels:
    app:  dependencies-graph-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  dependencies-graph-api
  template:
    metadata:
      labels:
        app:  dependencies-graph-api
    spec:
      imagePullSecrets:
      - name: github
      containers:
      - name:  dependencies-graph-api
        image: docker.pkg.github.com/xclemence/dependencies-graph-services/dependencies-graph-api:1.0.0
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: api-logs
          mountPath: /api/logs
      volumes:
      - name: api-logs
        emptyDir: {}
