OpenShift/api/api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name:  dependencies-graph-api-pod-test
  namespace: dependencies
  labels:
    app:  dependencies-graph-api
spec:
  imagePullSecrets:
    - name: github
  containers:
  - name:  dependencies-graph-api
    image: docker.pkg.github.com/xclemence/dependencies-graph-services/dependencies-graph-api:1.0.0
    ports:
    - containerPort: 80
      protocol: TCP
    - containerPort: 443
      protocol: TCP
    volumeMounts:
    - name: api-logs
      mountPath: /api/logs
  volumes:
  - name: api-logs
    emptyDir: {}
