OpenShift/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graph-api-service
  namespace: dependencies
spec:
  selector:
    app: dependencies-graph-api
  ports:
    - protocol: TCP
      name: http
      port: 8000
      targetPort: 8000
